--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "chart.js": "^4.5.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -28,6 +29,7 @@
     "mongoose": "^8.19.4",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "pdf-parse": "^2.4.5"
+    "pdf-parse": "^2.4.5",
+    "react-chartjs-2": "^5.3.1"
   }
 }
