--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@vapi-ai/web": "^2.5.1",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "html2canvas": "^1.4.1",
