--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.19.4",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.10.1",
     "pdf-parse": "^2.4.5",
     "react-chartjs-2": "^5.3.1"
   }
